--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "express": "^4.14.1",
     "isomorphic-fetch": "^2.2.1",
+    "json-2-csv": "^3.17.1",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "mongoose": "^4.8.4",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "babel-jest": "26.6.0",
